[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/fonts/FONTS/Hello Snow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/FONTS/eyelevation6.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/FONTS/Magical Snow.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://InterfaceUsuario.gd" type="Script" id=5]
[ext_resource path="res://assets/textures/player.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=8]
size = 100
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 250
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 190
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 4 )

[node name="InterfaceUsuario" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="StartLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -296.5
margin_right = 296.5
margin_bottom = 108.0
custom_fonts/font = SubResource( 8 )
text = "0"
align = 1
valign = 1

[node name="Sprite" type="Sprite" parent="StartLabel"]
position = Vector2( 294.5, 359.5 )
scale = Vector2( 23.9063, 12.6094 )
texture = ExtResource( 6 )

[node name="Mensajes" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -405.0
margin_top = -203.0
margin_right = 8.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "ICE  "
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Mensajes3" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -218.0
margin_right = 54.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 6 )
text = "2"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Mensajes2" type="Label" parent="."]
anchor_left = 0.69
anchor_top = 0.51
anchor_right = 0.69
anchor_bottom = 0.51
margin_left = -301.54
margin_top = -86.68
margin_right = 140.46
margin_bottom = 124.32
custom_fonts/font = SubResource( 4 )
text = "YOU"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Mensajes4" type="Label" parent="."]
anchor_left = 0.69
anchor_top = 0.51
anchor_right = 0.69
anchor_bottom = 0.51
margin_left = -315.54
margin_top = -188.68
margin_right = 136.46
margin_bottom = 0.320007
custom_fonts/font = SubResource( 5 )
text = "SEE "
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Start1Button" type="Button" parent="."]
anchor_left = 0.518
anchor_top = 0.828
anchor_right = 0.518
anchor_bottom = 0.828
margin_left = -85.588
margin_top = -40.9041
margin_right = 90.412
margin_bottom = 52.0959
custom_fonts/font = SubResource( 7 )
text = "START"
icon_align = 1

[node name="MensajesTimer" type="Timer" parent="."]
wait_time = 7.0

[connection signal="pressed" from="Start1Button" to="." method="_on_Start1Button_pressed"]
[connection signal="timeout" from="MensajesTimer" to="." method="_on_MensajesTimer_timeout"]
